# airtable_to_gsheets_script

./: main.py  pyproject.toml  readme.md
